--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@graphql-yoga/node": "^2.13.13",
     "@mui/base": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.8",
     "@supabase/auth-helpers-nextjs": "^0.2.9",
@@ -27,9 +28,12 @@
     "@supabase/supabase-js": "^1.35.7",
     "@supabase/ui": "^0.36.5",
     "classnames": "^2.3.2",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
